--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 	<form>
 <input type="search" placeholder="Search" name="search" class="searchinput">
 <button>type="search" class="btn-success" id="searchsub">Search</button>
-	</form>		
+	</form>	
+</div>
+</nav>
 	<center>
      <h1>BINI</h1>
     </center>
